@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.66 2002/10/03 05:19:42 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.67 2002/10/18 00:11:03 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1644,3 +1644,7 @@ gnu/dist/sendmail/smrsh/smrsh.c			1.9
 
   Plug smrsh vulnerability, as presented in
   http://www.sendmail.org/smrsh.adv.txt.  Fixes SA#2002-023.
+
+bin/ps						1.28 via patch
+  
+  Correct printf format string.
